--- a/package.json
+++ b/package.json
@@ -4,14 +4,31 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@changesets/cli": "^2.21.1",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nrwl/nest": "^13.8.4",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.0.0",
+    "tslib": "^2.0.0"
+  },
   "devDependencies": {
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "13.8.4",
+    "@nrwl/jest": "13.8.4",
     "@nrwl/js": "13.8.4",
+    "@nrwl/nest": "13.8.4",
+    "@nrwl/node": "^13.8.4",
     "@nrwl/tao": "13.8.4",
     "@nrwl/workspace": "13.8.4",
+    "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
+    "jest": "27.2.3",
     "prettier": "^2.5.1",
+    "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
   }
 }
