--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nrwl/nest": "^13.8.4",
+    "@nrwl/next": "^13.8.4",
+    "core-js": "^3.6.5",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
     "tslib": "^2.0.0"
   },
@@ -18,16 +24,34 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "13.8.4",
+    "@nrwl/cypress": "13.8.4",
     "@nrwl/jest": "13.8.4",
     "@nrwl/js": "13.8.4",
     "@nrwl/nest": "13.8.4",
     "@nrwl/node": "^13.8.4",
+    "@nrwl/react": "13.8.4",
     "@nrwl/tao": "13.8.4",
+    "@nrwl/web": "13.8.4",
     "@nrwl/workspace": "13.8.4",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
+    "@types/react": "17.0.30",
+    "@types/react-dom": "17.0.9",
+    "babel-jest": "27.2.3",
+    "cypress": "^9.1.0",
+    "eslint-config-next": "12.1.1-canary.3",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "jest": "27.2.3",
+    "msw": "^0.38.2",
     "prettier": "^2.5.1",
+    "react-test-renderer": "17.0.2",
+    "sass": "1.43.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
   }
