feat(frontend): add graphql codegen and one example of query

--- a/packages/frontend/project.json
+++ b/packages/frontend/project.json
@@ -48,6 +48,13 @@
       "options": {
         "lintFilePatterns": ["packages/frontend/**/*.{ts,tsx,js,jsx}"]
       }
+    },
+    "gql-generate": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "command": "cd packages/frontend && graphql-codegen"
+      },
+      "cwd": "packages/frontend"
     }
   },
   "tags": []
