--- a/package.json
+++ b/package.json
@@ -2,25 +2,34 @@
   "name": "anilist-custom",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
   "private": true,
   "dependencies": {
-    "@changesets/cli": "^2.21.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@nrwl/nest": "^13.8.4",
-    "@nrwl/next": "^13.8.4",
     "core-js": "^3.6.5",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.34.16",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@graphql-cli/coverage": "2.1.0",
+    "@graphql-cli/validate": "2.1.0",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/near-operation-file-preset": "^2.2.6",
+    "@graphql-codegen/typescript": "2.4.5",
+    "@graphql-codegen/typescript-graphql-request": "4.3.7",
+    "@graphql-codegen/typescript-operations": "^2.3.2",
+    "@graphql-codegen/typescript-react-query": "^3.5.5",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "13.8.4",
@@ -47,6 +56,9 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
+    "get-graphql-schema": "^2.1.2",
+    "graphql-cli": "^4.1.0",
+    "husky": "^7.0.4",
     "jest": "27.2.3",
     "msw": "^0.38.2",
     "prettier": "^2.5.1",
